--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "mobx-react-wrap",
   "version": "0.1.0",
-  "description": "Simplify your MobX React components",
+  "description": "Simplified React components via MobX",
   "author": "Tom Crockett <pelotom@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/pelotom/mobx-react-wrap.git"
   },
-  "main": "dist/typescript-library-boilerplate.js",
-  "module": "dist/typescript-library-boilerplate.es.js",
-  "jsnext:main": "dist/typescript-library-boilerplate.es.js",
-  "typings": "typings/index.d.ts",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc -m es2015 && rollup -c",
+    "build": "tsc",
     "clean": "rimraf dist typings tmp coverage .nyc_output",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "tslint --project tsconfig.json --format verbose",
     "test": "nyc ava",
     "upload-coverage": "nyc report --reporter=text-lcov | coveralls",
     "prebuild": "npm run clean",
@@ -40,21 +37,24 @@
     "npm": ">=2.15.9"
   },
   "peerDependencies": {
-    "mobx": "^2.6.0",
-    "mobx-react": "^3.5.8"
+    "mobx": "<3",
+    "mobx-react": "<4",
+    "react": "<16"
   },
   "devDependencies": {
     "ava": "^0.16.0",
     "change-case": "^3.0.0",
     "coveralls": "^2.11.11",
     "cross-env": "^3.0.0",
+    "mobx": "^2.6.0",
+    "mobx-react": "^3.5.8",
     "nyc": "^8.0.0",
+    "react": "^15.3.2",
     "rimraf": "^2.5.3",
-    "rollup": "^0.36.0",
-    "rollup-plugin-commonjs": "^5.0.3",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.0",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.0"
+    "typescript": "^2.1.0-dev.20161019"
+  },
+  "dependencies": {
+    "@types/react": "^0.14.41"
   }
 }
