--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,18 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "outDir": "tmp",
-    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "lib": ["dom", "es2015"],
     "moduleResolution": "node",
     "inlineSourceMap": true,
     "inlineSources": true,
     "declaration": true,
-    "declarationDir": "typings",
-    "newLine": "LF",
-    "strictNullChecks": true
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "experimentalDecorators": true,
+    "jsx": "react"
   },
   "include": [
-    "src/**/*"
+    "**/*.ts",
+    "**/*.tsx"
   ]
 }
