--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mobx-react": "^3.5.8",
     "nyc": "^8.0.0",
     "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "rimraf": "^2.5.3",
     "tslint": "^3.15.1",
     "typescript": "^2.1.0-dev.20161019"
