--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-dom": "^15.3.2",
     "rimraf": "^2.5.3",
     "tslint": "^3.15.1",
-    "typescript": "^2.1.0-dev.20161019"
+    "typescript": "^2.0.3"
   },
   "dependencies": {
     "@types/react": "^0.14.41"
