--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobx-components",
+  "name": "mobx-component",
   "version": "0.1.0",
   "description": "Simplified React components via MobX",
   "author": "Tom Crockett <pelotom@gmail.com>",
