--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-component",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Simplified React components via MobX",
   "author": "Tom Crockett <pelotom@gmail.com>",
   "license": "MIT",
@@ -29,8 +29,7 @@
     "boilerplate"
   ],
   "files": [
-    "dist",
-    "typings"
+    "index.d.ts"
   ],
   "engines": {
     "node": ">=4.6.0",
