Add some tests (1 failing for computed props)

--- a/package.json
+++ b/package.json
@@ -41,13 +41,16 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
+    "browser-env": "^2.0.12",
     "change-case": "^3.0.0",
     "coveralls": "^2.11.11",
     "cross-env": "^3.0.0",
+    "enzyme": "^2.5.1",
     "mobx": "^2.6.0",
     "mobx-react": "^3.5.8",
     "nyc": "^8.0.0",
     "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
     "rimraf": "^2.5.3",
     "tslint": "^3.15.1",
